--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,17 +17,21 @@
     "./package.json": "./package.json"
   },
   "devDependencies": {
-    "@gradio/preview": "0.12.0"
+    "@gradio/preview": "0.15.1",
+    "vite": "^7.2.4"
+  },
+  "peerDependencies": {
+    "svelte": "^5.43.4"
   },
   "dependencies": {
-    "@gradio/atoms": "0.9.2",
-    "@gradio/button": "0.3.3",
-    "@gradio/client": "1.7.0",
-    "@gradio/icons": "0.8.0",
-    "@gradio/markdown": "^0.10.3",
-    "@gradio/statustracker": "^0.9.1",
-    "@gradio/upload": "^0.13.3",
-    "@gradio/utils": "^0.7.0",
+    "@gradio/atoms": "^0.19.0",
+    "@gradio/button": "0.5.14",
+    "@gradio/client": "2.0.0",
+    "@gradio/icons": "0.15.0",
+    "@gradio/markdown": "^0.13.23",
+    "@gradio/statustracker": "^0.12.0",
+    "@gradio/upload": "^0.17.2",
+    "@gradio/utils": "^0.10.4",
     "pdfjs-dist": "4.2.67"
   }
 }
